--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dhtmlx-gantt": "^6.0.0",
     "react": "^16.6.0",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.0",
