--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "devextreme": "^18.2.3",
+    "devextreme-aspnet-data-nojquery": "^2.0.0",
+    "devextreme-react": "^18.2.3",
     "dhtmlx-gantt": "^6.0.0",
     "react": "^16.6.0",
     "react-burger-menu": "^2.5.4",
