--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.6.1",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "devextreme": "^18.2.3",
     "devextreme-aspnet-data-nojquery": "^2.0.0",
