--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.6.0",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.0",
+    "react-grid-system": "^4.3.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
