--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devextreme-aspnet-data-nojquery": "^2.0.0",
     "devextreme-react": "^18.2.3",
     "dhtmlx-gantt": "^6.0.0",
+    "moment-timezone": "^0.5.23",
     "react": "^16.6.0",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.0",
